# Japanese_vocab

./: .gitignore  ARCHITECTURE.md  DATABASE_INTEGRATION.md  README.md  TESTING_SUMMARY.md  convert_kana_entries.py  docker-compose.yml  entries.json  init_database.sh  init_database_mysql.sh  mimikara_n3.txt  mimikara_n3_fixed.txt  mimikara_n3_numbered_fixed.txt  mimikara_n3_questions.db  mimikara_n3_questions.db.sql  process_mimikara_n3.py  run_backend.bat  run_frontend.bat  setup.sh  start.bat  start.sh
backend/: .env.example  Cargo.toml  debug_stats_response.txt  main.py
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
database/: init.sql
frontend/: .env.example  app.js  package.json
frontend/controllers/: quizController.js
frontend/public/css/: style.css
frontend/public/js/: createQuiz.js  quiz.js
frontend/routes/: quizRoutes.js
frontend/views/: 404.ejs  createQuiz.ejs  quiz.ejs  quizList.ejs  quizResult.ejs  test.ejs
frontend/views/partials/: layout.ejs
